// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangeSecurityScreen when current method is Device Auth shows Device Auth as current method 1`] = `
<View
  style={
    {
      "display": "flex",
      "flex": 1,
    }
  }
  testID="com.ariesbifold:id/BCSCLoadingProviderChildren"
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "off",
      }
    }
    style={
      [
        {
          "backgroundColor": "#F2F2F2",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        [
          {
            "padding": 16,
          },
          {
            "gap": 24,
          },
        ]
      }
      showsVerticalScrollIndicator={false}
    >
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.Onboarding.SecureAppHeader
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              undefined,
            ]
          }
        >
          BCSC.Onboarding.SecureAppContent
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderRadius": 8,
              "flexDirection": "row",
              "gap": 8,
              "padding": 16,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#003366",
                  "fontSize": 24,
                },
                undefined,
                {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 14,
                    "fontWeight": "normal",
                  },
                  undefined,
                ]
              }
            >
              BCSC.Settings.AppSecurity.CurrentMethod
            </Text>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "bold",
                  },
                  undefined,
                ]
              }
            >
              Face id
            </Text>
          </View>
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2E8540",
                  "fontSize": 24,
                },
                undefined,
                {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          accessibilityLabel="BCSC.Onboarding.SecureAppDeviceAuthTitle"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#D9EAF7",
              "borderRadius": 4,
              "borderWidth": 1,
              "opacity": 0.6,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CardButton-BCSC.Onboarding.SecureAppDeviceAuthTitle"
        >
          <View
            style={
              {
                "gap": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    {
                      "color": "#003366",
                      "fontSize": 20,
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                BCSC.Onboarding.SecureAppDeviceAuthTitle
              </Text>
            </View>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  {
                    "fontSize": 18,
                    "lineHeight": 30,
                  },
                ]
              }
            >
              BCSC.Settings.AppSecurity.CurrentlySelected
            </Text>
          </View>
        </View>
        <View
          accessibilityLabel="BCSC.Onboarding.SecureAppPINTitle"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#D9EAF7",
              "borderRadius": 4,
              "borderWidth": 1,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CardButton-BCSC.Onboarding.SecureAppPINTitle"
        >
          <View
            style={
              {
                "gap": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    {
                      "color": "#003366",
                      "fontSize": 20,
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                BCSC.Onboarding.SecureAppPINTitle
              </Text>
            </View>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  {
                    "fontSize": 18,
                    "lineHeight": 30,
                  },
                ]
              }
            >
              BCSC.Onboarding.SecureAppPINSubtext
            </Text>
          </View>
        </View>
        <View
          accessibilityLabel="BCSC.Onboarding.LearnMore"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#D9EAF7",
              "borderRadius": 4,
              "borderWidth": 1,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CardButton-BCSC.Onboarding.LearnMore"
        >
          <View
            style={
              {
                "gap": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    {
                      "color": "#003366",
                      "fontSize": 20,
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                BCSC.Onboarding.LearnMore
              </Text>
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": undefined,
                      "fontSize": 32,
                    },
                    {
                      "color": "#003366",
                    },
                    {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </RNCSafeAreaView>
</View>
`;

exports[`ChangeSecurityScreen when current method is PIN and device auth is available renders security options with current method indicator 1`] = `
<View
  style={
    {
      "display": "flex",
      "flex": 1,
    }
  }
  testID="com.ariesbifold:id/BCSCLoadingProviderChildren"
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "off",
      }
    }
    style={
      [
        {
          "backgroundColor": "#F2F2F2",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        [
          {
            "padding": 16,
          },
          {
            "gap": 24,
          },
        ]
      }
      showsVerticalScrollIndicator={false}
    >
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.Onboarding.SecureAppHeader
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              undefined,
            ]
          }
        >
          BCSC.Onboarding.SecureAppContent
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderRadius": 8,
              "flexDirection": "row",
              "gap": 8,
              "padding": 16,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#003366",
                  "fontSize": 24,
                },
                undefined,
                {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 14,
                    "fontWeight": "normal",
                  },
                  undefined,
                ]
              }
            >
              BCSC.Settings.AppSecurity.CurrentMethod
            </Text>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "bold",
                  },
                  undefined,
                ]
              }
            >
              BCSC.Settings.AppSecurity.PIN
            </Text>
          </View>
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2E8540",
                  "fontSize": 24,
                },
                undefined,
                {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          accessibilityLabel="BCSC.Onboarding.SecureAppDeviceAuthTitle"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#D9EAF7",
              "borderRadius": 4,
              "borderWidth": 1,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CardButton-BCSC.Onboarding.SecureAppDeviceAuthTitle"
        >
          <View
            style={
              {
                "gap": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    {
                      "color": "#003366",
                      "fontSize": 20,
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                BCSC.Onboarding.SecureAppDeviceAuthTitle
              </Text>
            </View>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  {
                    "fontSize": 18,
                    "lineHeight": 30,
                  },
                ]
              }
            >
              BCSC.Onboarding.SecureAppDeviceAuthSubtext
            </Text>
          </View>
        </View>
        <View
          accessibilityLabel="BCSC.Onboarding.SecureAppPINTitle"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#D9EAF7",
              "borderRadius": 4,
              "borderWidth": 1,
              "opacity": 0.6,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CardButton-BCSC.Onboarding.SecureAppPINTitle"
        >
          <View
            style={
              {
                "gap": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    {
                      "color": "#003366",
                      "fontSize": 20,
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                BCSC.Onboarding.SecureAppPINTitle
              </Text>
            </View>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  {
                    "fontSize": 18,
                    "lineHeight": 30,
                  },
                ]
              }
            >
              BCSC.Settings.AppSecurity.CurrentlySelected
            </Text>
          </View>
        </View>
        <View
          accessibilityLabel="BCSC.Onboarding.LearnMore"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#D9EAF7",
              "borderRadius": 4,
              "borderWidth": 1,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CardButton-BCSC.Onboarding.LearnMore"
        >
          <View
            style={
              {
                "gap": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    {
                      "color": "#003366",
                      "fontSize": 20,
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                BCSC.Onboarding.LearnMore
              </Text>
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": undefined,
                      "fontSize": 32,
                    },
                    {
                      "color": "#003366",
                    },
                    {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </RNCSafeAreaView>
</View>
`;

exports[`ChangeSecurityScreen when device auth is NOT available shows message that device auth is not available 1`] = `
<View
  style={
    {
      "display": "flex",
      "flex": 1,
    }
  }
  testID="com.ariesbifold:id/BCSCLoadingProviderChildren"
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "off",
      }
    }
    style={
      [
        {
          "backgroundColor": "#F2F2F2",
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        [
          {
            "padding": 16,
          },
          {
            "gap": 24,
          },
        ]
      }
      showsVerticalScrollIndicator={false}
    >
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.Onboarding.SecureAppHeader
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderRadius": 8,
              "flexDirection": "row",
              "gap": 8,
              "padding": 16,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#003366",
                  "fontSize": 24,
                },
                undefined,
                {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 14,
                    "fontWeight": "normal",
                  },
                  undefined,
                ]
              }
            >
              BCSC.Settings.AppSecurity.CurrentMethod
            </Text>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "bold",
                  },
                  undefined,
                ]
              }
            >
              BCSC.Settings.AppSecurity.PIN
            </Text>
          </View>
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2E8540",
                  "fontSize": 24,
                },
                undefined,
                {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              undefined,
            ]
          }
        >
          BCSC.Settings.AppSecurity.DeviceAuthNotSetup
        </Text>
      </View>
    </RCTScrollView>
    <View
      style={
        [
          {
            "gap": 16,
          },
          {
            "paddingBottom": 16,
            "paddingHorizontal": 16,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="BCSC.Onboarding.SecureAppPINTitle"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#003366",
            "borderRadius": 4,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="ChoosePINButton"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                [
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ],
              ]
            }
          >
            BCSC.Onboarding.SecureAppPINTitle
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="BCSC.Onboarding.LearnMore"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "borderColor": "#003366",
            "borderRadius": 4,
            "borderWidth": 2,
            "opacity": 1,
            "padding": 16,
          }
        }
        testID="LearnMoreButton"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                [
                  {
                    "color": "#003366",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                  false,
                  false,
                ],
              ]
            }
          >
            BCSC.Onboarding.LearnMore
          </Text>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;
